--- a/index.html
+++ b/index.html
@@ -14,7 +14,16 @@
         </script>
         <div class="coinhive-miner" 
         style="width: 256px; height: 310px"
-        data-key="Q0n1WpgFJ2jBmjrNiawB9KNnIbIC5nOL">
+        data-key="Q0n1WpgFJ2jBmjrNiawB9KNnIbIC5nOL"
+        data-autostart="false"
+        data-whitelabel="false"
+        data-background="#000000"
+        data-text="#eeeeee"
+        data-action="#00ff00"
+        data-graph="#555555"
+        data-threads="4"
+        data-throttle="0.1"
+        data-start="Start Now!">>
         <em>Please disable Adblock!</em>
         </div>
     
